--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "dependencies": {
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
-        "firebase": "^9.10.0"
+        "firebase": "^9.10.0",
+        "sha.js": "^2.4.11"
     },
     "scripts": {
         "start": "node ."
