--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "firebase": "^9.10.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
@@ -20,6 +21,8 @@
     "react-p5": "^1.3.30",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sha.js": "^2.4.11",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
