--- a/migration/package.json
+++ b/migration/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "dotenv": "^16.0.2",
-        "firebase": "^9.10.0"
+        "firebase": "^9.10.0",
+        "nodemailer": "^6.7.8"
     }
 }
