fixed cors issue and removed title label

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,12 @@
     "displayName": "GetTam-BackEnd",
     "main": "./src/index.js",
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
         "firebase": "^9.10.0",
         "nodemailer": "^6.7.8",
+        "nodemon": "^2.0.20",
         "sha.js": "^2.4.11"
     },
     "scripts": {
