--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,15 @@
 {
-  "short_name": "GetTam",
-  "name": "GetTam-React",
-  "icons": [
-    {
-      "src": "assets/images/GetTamLogoSmall.ico",
-      "sizes": "256x186 64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone"
+	"short_name": "gettam-analytics",
+	"name": "GetTam Analytics",
+	"icons": [
+		{
+			"src": "favicon.ico",
+			"sizes": "64x64 32x32 24x24 16x16",
+			"type": "image/x-icon"
+		}
+	],
+	"start_url": ".",
+	"display": "standalone",
+	"theme_color": "#000000",
+	"background_color": "#ffffff"
 }
