--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,18 @@
 {
-    "name": "gettam-backend",
-    "displayName": "GetTam-BackEnd",
-    "main": "./src/index.js",
-    "dependencies": {
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.2",
-        "express": "^4.18.1",
-        "firebase": "^9.10.0",
-        "nodemailer": "^6.7.8",
-        "nodemon": "^2.0.20",
-        "sha.js": "^2.4.11"
-    },
-    "scripts": {
-        "start": "node ."
-    }
+	"name": "gettam-backend",
+	"displayName": "GetTam-BackEnd",
+	"main": "./src/index.js",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.2",
+		"express": "^4.18.1",
+		"firebase": "^9.10.0",
+		"nodemailer": "^6.7.8",
+		"nodemon": "^2.0.20",
+		"sha.js": "^2.4.11"
+	},
+	"scripts": {
+		"start": "node .",
+		"deploy": "git add --all && git commit -m 'deploy' && git push heroku master"
+	}
 }
