--- a/analytics/package.json
+++ b/analytics/package.json
@@ -2,7 +2,7 @@
 	"name": "a",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://nekumelon.github.io/GetTam-Analytics",
+	"homepage": "https://cadenmarinozzi.github.io/GetTam-Analytics",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.2.0",
